# Skill-JEPA

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/dataset/: tworoom.yaml
config/env/: tworoom.yaml
config/eval/: default.yaml
config/experiment/: local_test.yaml
config/model/: jumpy.yaml  standard.yaml
config/solver/: cem.yaml
config/training/: default.yaml
config/world/: default.yaml
scripts/: downlad_data.py  train_standard.sh
src/: build_wds.py  callbacks.py  config.py  datamodule.py  dataset.py  eval.py  generate_poly_dataset.py  jepa.py  model.py  module.py  system.py  train.py  utils.py
training_configs/: laptop_test.yaml  mixed_shapes_color_100k.yaml  mixed_shapes_color_100k_0.90_masking_small_patch.yaml  training_multiple_shapes.yaml
